// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  AnswerBox Component should match snapshot with answer 1`] = `
<section
  role="form"
>
  <form
    className="mb--0"
    onSubmit={[Function]}
  >
    <div
      className="form__group form__group--textarea mb--b"
    >
      <textarea
        className="form__input form__input--textarea"
        data-hj-whitelist={true}
        data-qa-sel="Comment-text-area"
        defaultValue="an updated answer"
        disabled={false}
        id="string"
        onInput={[Function]}
      />
    </div>
    <span
      className="ml--0 mb--0 CommentBox__savedIndicator"
    >
      Saved
    </span>
    <button
      className="btn mr--0 mb--0 right"
      data-qa-sel="delete-comment-button"
      onClick={[Function]}
    >
      Delete
    </button>
  </form>
</section>
`;

exports[`[ClientApp]  AnswerBox Component should match snapshot without answer 1`] = `
<section
  role="form"
>
  <form
    className="mb--0"
    onSubmit={[Function]}
  >
    <div
      className="form__group form__group--textarea mb--b"
    >
      <textarea
        className="form__input form__input--textarea"
        data-hj-whitelist={true}
        data-qa-sel="Comment-text-area"
        defaultValue=""
        disabled={false}
        id="string"
        onInput={[Function]}
      />
    </div>
  </form>
</section>
`;
